Amended some copyright notices and updated READMEs.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-For full details, see http://maidsafe.github.io/MaidSafe-Network-Filesystem/
+For full details, see http://www.novinet.com/library-nfs.php
